Cleaning Edit [Kana] Page for new Qt lib, fixed dateformat/qcmEntriesPerLine variable mixup during initialization, fixed Edit [Kana] Page not using the correct font, added Vocab sheet template for testing purposes, cleaning some other stuff, etc

--- a/Src/appsettings.ui
+++ b/Src/appsettings.ui
@@ -85,6 +85,9 @@
            <height>16777215</height>
           </size>
          </property>
+         <property name="currentIndex">
+          <number>2</number>
+         </property>
          <item>
           <property name="text">
            <string>1x3</string>
