--- a/Src/vocabularylearneditset.ui
+++ b/Src/vocabularylearneditset.ui
@@ -10,6 +10,9 @@
     <height>400</height>
    </rect>
   </property>
+  <property name="contextMenuPolicy">
+   <enum>Qt::PreventContextMenu</enum>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
@@ -49,7 +52,7 @@
         <x>0</x>
         <y>0</y>
         <width>400</width>
-        <height>400</height>
+        <height>377</height>
        </rect>
       </property>
       <property name="sizePolicy">
@@ -79,17 +82,17 @@
          <property name="spacing">
           <number>0</number>
          </property>
-         <item>
-          <widget class="QPushButton" name="SelectAllButton">
-           <property name="text">
-            <string>Select/Unselect All</string>
-           </property>
-          </widget>
-         </item>
         </layout>
        </item>
       </layout>
      </widget>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="SelectAllButton">
+     <property name="text">
+      <string>Select / Unselect All</string>
+     </property>
     </widget>
    </item>
   </layout>
