--- a/Src/vocabularydisplay.ui
+++ b/Src/vocabularydisplay.ui
@@ -41,6 +41,9 @@
      <property name="spacing">
       <number>20</number>
      </property>
+     <property name="sizeConstraint">
+      <enum>QLayout::SetMinimumSize</enum>
+     </property>
      <property name="leftMargin">
       <number>20</number>
      </property>
